k8s/security/opa/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: opa
  labels:
    name: opa
    openpolicyagent.org/webhook: ignore
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
